--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -231,3 +231,19 @@ html {
   margin-bottom: 20px;
   margin-top: 20px;
 }
+
+/* Fullscreen Loader Animations */
+@keyframes loading {
+  0% {
+    width: 0%;
+    transform: translateX(0);
+  }
+  50% {
+    width: 70%;
+    transform: translateX(0);
+  }
+  100% {
+    width: 100%;
+    transform: translateX(100%);
+  }
+}
